--- a/tests/integration/targets/mount/tasks/main.yml
+++ b/tests/integration/targets/mount/tasks/main.yml
@@ -429,6 +429,9 @@
 
 - name: Block to test ephemeral option
   tags: ['ephemeral']
+  # Required for NetBSD for some reason
+  environment:
+    PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
   block:
   - name: Patch centos repolist
     ansible.builtin.shell:
@@ -485,12 +488,12 @@
     - name: Format FS A on Solaris/SunOS
       ansible.builtin.shell: >
         lofiadm -a /tmp/myfs_A.img /dev/lofi/1 &&
-        printf 'y\n' | newfs /dev/lofi/1
+        yes | newfs /dev/lofi/1
     
     - name: Format FS B on Solaris/SunOS
       ansible.builtin.shell: >
         lofiadm -a /tmp/myfs_B.img /dev/lofi/2 &&
-        printf 'y\n' | newfs /dev/lofi/2
+        yes | newfs /dev/lofi/2
     
     - name: Register Solaris/SunOS block devices as fact
       ansible.builtin.set_fact:
@@ -517,46 +520,50 @@
         mdconfig -a -t vnode -f /tmp/myfs_B.img -u /dev/md2
 
     - name: Format FS A on FreeBSD
-      ansible.builtin.shell: newfs /dev/md1
+      ansible.builtin.shell: yes | newfs /dev/md1
       # Cannot use filesystem module on a fresh FreeBSD: blkid is absent
       #community.general.filesystem:
       #  fstype: ufs
       #  dev: /dev/md1
 
     - name: Format FS B on FreeBSD
-      ansible.builtin.shell: newfs /dev/md2
+      ansible.builtin.shell: yes | newfs /dev/md2
       # Cannot use filesystem module on a fresh FreeBSD: blkid is absent
       #community.general.filesystem:
       #  fstype: ufs
       #  dev: /dev/md2
     when: ansible_system in ('FreeBSD')
 
-##### FORMAT FS ON OPENBSD
+##### FORMAT FS ON NETBSD
 
-  - name: Block to format FS on OpenBSD
+  - name: Block to format FS on NetBSD
     block:
-    - name: Register OpenBSD block devices as fact
+    - name: Register NetBSD block devices as fact
       ansible.builtin.set_fact:
-        ephemeral_device_A: /dev/md1
-        ephemeral_device_B: /dev/md2
-        ephemeral_fstype: ufs
+        ephemeral_device_A: /dev/vnd1
+        ephemeral_device_B: /dev/vnd2
+        ephemeral_fstype: ffs
         ephemeral_fstab: /etc/fstab
 
-    - name: Prepare block devices on OpenBSD
+    - name: Prepare block devices on NetBSD
       ansible.builtin.shell: |
-        mdconfig -a -t vnode -f /tmp/myfs_A.img -u /dev/md1
-        mdconfig -a -t vnode -f /tmp/myfs_B.img -u /dev/md2
+        /usr/sbin/vnconfig /dev/vnd1 /tmp/myfs_A.img
+        /usr/sbin/vnconfig /dev/vnd2 /tmp/myfs_B.img
 
-    - name: Format FS A on OpenBSD
-      community.general.filesystem:
-        fstype: ufs
-        dev: /dev/md1
+    - name: Format FS A on NetBSD
+      ansible.builtin.shell: /usr/bin/yes | /sbin/newfs /dev/vnd1
+      # The filesystem module does not know "ffs" fstype
+      #community.general.filesystem:
+      #  fstype: ffs
+      #  dev: /dev/vnd1
 
-    - name: Format FS B on OpenBSD
-      community.general.filesystem:
-        fstype: ufs
-        dev: /dev/md2
-    when: ansible_system in ('OpenBSD')
+    - name: Format FS B on NetBSD
+      ansible.builtin.shell: /usr/bin/yes | /sbin/newfs /dev/vnd2
+      # The filesystem module does not know "ffs" fstype
+      #community.general.filesystem:
+      #  fstype: ffs
+      #  dev: /dev/vnd2
+    when: ansible_system in ('NetBSD')
 
   #- name: DEBUG - FAIL ON PURPOSE
   #  shell: 'false'
@@ -668,11 +675,11 @@
         - test_file_stat['stat']['exists']
         - ephemeral_mount_b_info is failed
 
-  - name: Remount FS mounted with ephemeral option
+  - name: Remount FS initially mounted with ephemeral option
     mount:
       path: /tmp/myfs
       state: remounted
-    when: ansible_system not in ('FreeBSD')
+    when: ansible_system not in ('FreeBSD', 'NetBSD')
 
   - name: Get fstab checksum after a remount of an ephemeral mount
     stat:
@@ -722,11 +729,11 @@
         state: unmounted
     
     - name: Remove loop devices on SunOS/Solaris
-      ansible.builtin.shell: "lofiadm -d /dev/lofi/'{{ item }}' || true" # || true to not return 1 when /dev/lofi/x does not exist
+      ansible.builtin.shell: "lofiadm -d '{{ item }}' || true" # || true to not return 1 when /dev/lofi/x does not exist
       #with_list:
       loop:
-        - '1'
-        - '2'
+        - '/dev/lofi/1'
+        - '/dev/lofi/2'
       when: ansible_system in ('SunOS')
 
     # DEBUG: variabilize loop device removal commands,
@@ -736,9 +743,17 @@
       ansible.builtin.shell: "mdconfig -d -u '{{ item }}' || true" # || true to not return 1 when /dev/lofi/x does not exist
       #with_list:
       loop:
-        - '1'
-        - '2'
+        - '/dev/md1'
+        - '/dev/md2'
       when: ansible_system in ('FreeBSD')
+    
+    - name: Remove loop devices on NetBSD
+      ansible.builtin.shell: "/usr/sbin/vnconfig -u '{{ item }}' || true" # || true to not return 1 when /dev/lofi/x does not exist
+      #with_list:
+      loop:
+        - '/dev/vnd1'
+        - '/dev/vnd2'
+      when: ansible_system in ('NetBSD')
 
     - name: Remove the test FS
       file:
@@ -749,5 +764,5 @@
         - /tmp/myfs_A.img
         - /tmp/myfs_B.img
         - /tmp/myfs
-  when: ansible_system in ('Linux', 'SunOS', 'FreeBSD')
+  when: ansible_system in ('Linux', 'SunOS', 'FreeBSD', 'NetBSD')
   
